<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">备孕手册</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="abouttitle">关于本软件</string>
	<string name="text1">您是否很希望备孕成功？备孕手册助您一臂之力！备孕手册是准爸爸准妈妈的必备软件，你想要一个健康聪明的宝宝吗？下载备孕手册App吧，里面有孕前必备、怀孕须知、调理保健等很多怀孕必备的小知识，非常的全面，每天刷一刷学习一下，还是蛮有用的。有需要的朋友快点下载吧！
	</string>
	<string name="title2">版本V1.0.1的改进</string>
	<string name="text2">1.优化了用户界面;
		2.对一些已知的bug进行了修复，提高了软件的稳定性;
		3.增加了软件的帮助说明。
	</string>
	<string name="title3">用户反馈</string>
	<string name="text3">如果您在使用软件的过程中，有任何意见或者建议，欢迎发送邮件到以下邮箱地址，你宝贵的意见对我们持续改进软件质量有很大的帮助。联系我们：lishidezy@163.com
	</string>
	<string name="copyright">copyright ©2015 Pregnant.All Rights Reserved</string>
	

    <style name="CustomWindowTitleBackground">  
    <item name="android:background">@drawable/title_bg</item>
	</style>
	<style name="test" parent="android:Theme">  
    <item name="android:windowTitleSize">50dp</item>
	<item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
	</style>
	
</resources>
